--- a/a15-polynomial-interpolation.tex
+++ b/a15-polynomial-interpolation.tex
@@ -1,4 +1,4 @@
-Suppose we are given $n+1$ two-dimensional coordinates $(x_0, y_0), (x_1, y_1), \cdots, (x_n, y_n)$, whereas all $x$ values are distinct but $y$ values are not necessarily distinct. Lagrange's polynomial interpolation is a technique to find a unique $n$-degree polynomial that passes through such $n+1$ coordinates. The domain of $X$ and $Y$ values is complex numbers (which include the real domain), or can be modulo prime.
+Suppose we are given $n+1$ two-dimensional coordinates $(x_0, y_0), (x_1, y_1), \cdots, (x_n, y_n)$, whereas all $x$ values are distinct, but $y$ values are not necessarily distinct. Lagrange's polynomial interpolation is a technique to find a unique $n$-degree polynomial that passes through such $n+1$ coordinates. The domain of $X$ and $Y$ values is complex numbers (which include the real domain), or can be modulo prime.
 
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{sec:polynomial-interpolation}} Lagrange's Polynomial Interpolation}}]
@@ -31,10 +31,6 @@ We call $\{\ell_0(X), \ell_1(X), \ldots, \ell_{n}(X) \}$ the Lagrange basis for 
 
 \item We have shown that there exists some $n$-degree (or lesser degree) polynomial $f(X)$ that passes through $n+1$ distinct $(X, Y)$ coordinates, and no such two or more distinct polynomials exists. Therefore, there exists only a unique polynomial that satisfies this requirement. 
 
-
-
-
- 
 \end{enumerate}
 \end{myproof}
 
