--- a/a16-ntt.tex
+++ b/a16-ntt.tex
@@ -26,7 +26,7 @@ Then, the point-value representation of the polynomial $C(X) = A(X) \cdot B(X)$ 
 
 $C(X)$ : $\bm ( ({x}_0, {y}_0^{\langle c \rangle}), ({x}_1, {y}_1^{\langle c \rangle}), \cdots ({x}_{n-1}, {y}_{n-1}^{\langle c \rangle}) \bm )$, where ${y}_i^{\langle c \rangle} = {y}_i^{\langle a \rangle} \cdot {y}_i^{\langle b \rangle}$
 
-However, we cannot derive polynomial $C(X)$ based on these $n$ coordinates because the degree of $C(X)$ is $2n-2$ (or less than $2n-2$). But if we regard all polynomials (including $A(X), B(X)$ and $C(X)$) to be in the polynomial ring $\mathbb{R}[X]/ X^n + 1$ (or $\mathbb{Z}[X]_p/ X^n + 1$), then we can reduce the $(2n-2)$-degree polynomial $C(X)$ to a congruent $(n-1)$-degree (or lesser degree) polynomial in the ring. Then, the $n-1$ coordinates of $C(X)$ are sufficient to derive $C(X)$. 
+However, we cannot derive polynomial $C(X)$ based on these $n$ coordinates because the degree of $C(X)$ is $2n-2$ (or less than $2n-2$). But if we regard all polynomials (including $A(X), B(X)$ and $C(X)$) to be in the polynomial ring $\mathbb{R}[X]/ X^n + 1$ (or $\mathbb{Z}_p[X]/ X^n + 1$), then we can reduce the $(2n-2)$-degree polynomial $C(X)$ to a congruent $(n-1)$-degree (or lesser degree) polynomial in the ring. Then, the $n-1$ coordinates of $C(X)$ are sufficient to derive $C(X)$. 
 
 However, the time complexity of this new method is still $O(n^2)$. The Hadamard product between two polynomials' point-value representations takes $O(n)$, but evaluating a polynomial at $n$ distinct $x$ values takes $O(n^2)$ (because each polynomial has $n$ terms, and we have to compute each term for $n$ distinct $x$ values). The polynomial interpolation for deriving $C(X)$ also takes $O(n^2)$. 
 
@@ -35,7 +35,7 @@ To solve this efficiency problem, this section will introduce an efficient techn
 \subsection{Forward FFT (or NTT)}
 \label{subsec:ntt-forward}
 
-We assume a polynomial ring of $\mathbb{R}[X]/ X^n + 1$ for FTT, and $\mathbb{Z}[X]_p/ X^n + 1$ for NTT (where $X^n + 1$ is a cyclotomic polynomial). The $x$ coordinates to evaluate the target polynomial are the $n$ distinct roots of $X^n + 1$, which are $\omega^1$, $\omega^3, \ldots, \omega^{2n-1}$, where $\omega$ is the primitive $2n$-th root of unity. Then, the point-value representation of the polynomial $A(X)$ is $\bm ( ({x}_0, {y}_0^{\langle a \rangle}), ({x}_1, {y}_1^{\langle a \rangle}), \cdots ({x}_{n-1}, {y}_{n-1}^{\langle a \rangle}) \bm )$, where: 
+We assume a polynomial ring of $\mathbb{R}[X]/ X^n + 1$ for FTT, and $\mathbb{Z}_p[X]/ X^n + 1$ for NTT (where $X^n + 1$ is a cyclotomic polynomial). The $x$ coordinates to evaluate the target polynomial are the $n$ distinct roots of $X^n + 1$, which are $\omega^1$, $\omega^3, \ldots, \omega^{2n-1}$, where $\omega$ is the primitive $2n$-th root of unity. Then, the point-value representation of the polynomial $A(X)$ is $\bm ( ({x}_0, {y}_0^{\langle a \rangle}), ({x}_1, {y}_1^{\langle a \rangle}), \cdots ({x}_{n-1}, {y}_{n-1}^{\langle a \rangle}) \bm )$, where: 
 
 ${y}_i^{\langle a \rangle} = A(\omega^{2i + 1}) = \sum\limits_{j=0}^{n-1}a_{j}\cdot (\omega^{2i + 1})^j = \sum\limits_{j=0}^{n-1}a_{j}\cdot \omega^{(2i + 1)\cdot j}$. 
 
@@ -129,12 +129,6 @@ $ $
 
 Using the FFT technique, we reduce the number of $x$ points to evaluate to half as the level decreases (while the number of polynomials to evaluate doubles), and their growth and reduction cancel each other, resulting in $O(n)$ for each level. Since there are $\log n$ such levels, the total time complexity is $O(n \log n)$. The core enabler of this optimization is the special property of the $x$ evaluation coordinates: its power (i.e., $\omega^i$) is cyclic. To enforce this cyclic property, FFT requires the evaluation points of $x$ to be the odd-powered primitive $2n$-th roots of unity. 
 
-%\para{Computation for FFT Level 1:} We first need to evaluate $A_0(X^2)$ and $A_1(X^2)$ at $X = \{\omega^0, \omega^2, \cdots, \omega^7\}$. But notice that half of the evaluations for $A_0(X^2)$ and $A_1(X^2)$ result in the same value, because the order of $\omega$ is $n$ (i.e., $\omega^8 = 1$). Therefore, the gross computation of the 1st level of FFT technically requires only $\dfrac{n}{2} = 4$ evaluations of $A_0(X)$ and $A_1(X)$ each, instead of $\dfrac{n}{2}$ evaluations. After the evaluations, when we multiply $\omega^i$ and $A_1((\omega^i)^2)$ for each $0 \leq i \leq 7$, we only need to technically compute $\dfrac{n}{2} = 4$ of them, because we know that the second half of $\omega^i$ is an opposite-signed value of the first half of $\omega^i$, because $\omega^{\frac{n}{2}} = -1$ (\textit{proof}: since $(\omega^{\frac{n}{2}})^2) = 1$ and the order of $\omega$ is $n$, the order of $\omega^{\frac{n}{2}}$ is 2, and if $X^2 = 1$ where $X = \omega^{\frac{n}{2}}$, then $X = \{1, -1\}$, but since the order of $\omega^{\frac{n}{2}}$ is 2, $X^2 = (\omega^{\frac{n}{2}})^2$ cannot be 1, and thus $\omega^{\frac{n}{2}} = -1$). The number of required addition is $n = 8$, because we need to add the computation result of $A_0((\omega^i)^2)$ and $\omega^i \cdot A_1((\omega^i)^2)$ for $0 \leq i \leq 7$. 
-
-%\para{Computation for FFT Level 2:} We need to evaluate four polynomials $A_{0, 0}(X^4)$, $A_{0, 1}(X^4)$, $A_{1, 0}(X^4)$, and $A_{1, 1}(X^4)$ at $X = \{\omega^0, \omega^2, \cdots, \omega^7\}$. However, we technically need to evaluate only $\dfrac{n}{4} = 2$ of them, because $(\omega^i)^4$ for $0 \leq i \leq n - 1$ repeats its value 4 times. The number of multiplications between $(\omega^i)^2$ and $A_{0, 1}((\omega^i)^4)$, $A_{1, 1}((\omega^i)^4)$ we need to do is technically $\dfrac{n}{4} = 2$, because $(\omega^i)^2$ repeats its value twice for between $0 \leq i \leq n - 1$, and half of their sign is an opposite of their other half. The number of additions is $n \cdot \log 2^l = $, because 
-
-
-%requires only $\dfrac{n}{2} = 4$ multiplications between each  (because the second half of $\dfrac{n}{2}$ multiplications have the same value for $A_1((\omega^i)^2)$ of the first half and an opposite sign for $\omega^i$ of the first half, so they are automatically determined by the first half), and $n - 1 = 7$ additions between each $A_0((\omega^i)^2)$ and $\omega^i\cdot A_1((\omega^i)^2)$ for $0 \leq i \leq 7$. 
 
 \subsection{Point-wise Multiplication}
 \label{subsec:pointwise-multiplication}
