--- a/a08-cyclotomic-polynomial.tex
+++ b/a08-cyclotomic-polynomial.tex
@@ -22,7 +22,7 @@ $\Phi_1(x) = x - 1$
 \newline $\Phi_4(x) = x^2 + 1$
 \newline $\Phi_5(x) = x^4 + x^3 + x^2 + x + 1$
 \newline $\Phi_6(x) = x^2 - x + 1$
-\newline $\Phi_7(x) = x^6 + x^5 + x^4 + x^3 + x^2 + 1$
+\newline $\Phi_7(x) = x^6 + x^5 + x^4 + x^3 + x^2 + x + 1$
 \newline $\Phi_8(x) = x^4 + 1$
 \newline $\Phi_9(x) = x^6 + x^3 + 1$
 \newline $\Phi_{10}(x) = x^4 - x^3 + x^2 - x + 1$
@@ -33,7 +33,7 @@ $\Phi_1(x) = x - 1$
 As one example, 
 
 \[\Phi_4(x) = \prod_{\substack{0 \leq k \leq 3,\\ 
- \text{gcd}(k, 4) = 1}} (x - \omega^k) = (x - \omega^1)(x - \omega^3) = (x - e^{2\pi i / 4})(x - e^{2\cdot3\pi i / 4}) = (x - e^{\pi i / 2})(x - e^{\cdot3\pi i / 2})\]
+ \text{gcd}(k, 4) = 1}} (x - \omega^k) = (x - \omega^1)(x - \omega^3) = (x - e^{2\pi i / 4})(x - e^{2\cdot3\pi i / 4}) = (x - e^{\pi i / 2})(x - e^{3\pi i / 2})\]
 
 $= \left(x - \left(\cos\left(\dfrac{\pi}{2}\right) + i \cdot \sin\left(\dfrac{\pi}{2}\right) \right) \right) \cdot \left(x - \left(\cos\left(\dfrac{3\pi}{2}\right) + i \cdot \sin\left(\dfrac{3\pi}{2}\right) \right) \right)$
 
@@ -72,12 +72,12 @@ A cyclotomic polynomial has only integer coefficients.
 \begin{myproof}
 \begin{enumerate}
     \item We prove by induction. When $n=1$, $\Phi_1(X) = x - 1$, where each coefficient is an integer.
-    \item Let $x^n - 1 = f(x) \cdot g(x) = (\Sigma_{i=0}^{p}a_ix^i)(\Sigma_{j=0}^{q}b_jx^i)$. As an induction hypothesis 1, we will prove that if $f(x)$ has only integer coefficients, then $g(x)$ will also have only integer coefficients. Given our target equation is $x^n - 1$, we know that $a_px_p \cdot b_qx_q = x^n$, and thus $a_pb_q = 1$, which means $a_p = \pm 1$ (as we hypothesized that $f(x)$ has only integer coefficients). We also know that $a_0b_0 = -1$. All the other coefficients should be 0. Thus, for any $r < q$, the coefficients are either: (i) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q} = 0$; or (ii) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{0}b_{r+p} = 0$. Both case (i) and (ii) represent $f(x)\cdot g(x)$'s computed coefficient of some $x^i$ where $0 < i < n$. Now, we propose another induction hypothesis 2, which is that $b_{q}, ... \text{ } b_{r+1}$ are all integers.
+    \item Let $x^n - 1 = f(x) \cdot g(x) = (\Sigma_{i=0}^{p}a_ix^i)(\Sigma_{j=0}^{q}b_jx^j)$. As an induction hypothesis 1, we will prove that if $f(x)$ has only integer coefficients, then $g(x)$ will also have only integer coefficients. Given our target equation is $x^n - 1$, we know that $a_px^p \cdot b_qx^q = x^n$, and thus $a_pb_q = 1$, which means $a_p = \pm 1$ (as we hypothesized that $f(x)$ has only integer coefficients). We also know that $a_0b_0 = -1$. All the other coefficients should be 0. Thus, for any $r < q$, the coefficients are either: (i) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q} = 0$; or (ii) $a_pb_{r} + a_{p-1}b_{r + 1} + ... + a_{0}b_{r+p} = 0$. Both case (i) and (ii) represent $f(x)\cdot g(x)$'s computed coefficient of some $x^i$ where $0 < i < n$. Now, we propose another induction hypothesis 2, which is that $b_{q}, ... \text{ } b_{r+1}$ are all integers.
     \item In the case of (i), $a_pb_{r} = -(a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q})$, and dividing both sides by $a_p$ (which is either $1$ or $-1$), $b_{r} = \pm(a_{p-1}b_{r + 1} + ... + a_{p-q+r}b_{q})$, as every $a_i$ is an integer based on our hypothesis. By induction hypothesis 1 and 2, $b_r$ is an integer. The same is true in the case of (ii). 
     \item We set $b_q$ (an integer coefficient) as the starting point for induction hypothesis 2. Then, according to induction proof 2, all of $b_j$ for $0 \leq j \leq q$ are integers.
-    \item Now, we set $\Phi_1(X)$ (an integer coefficient polynomial) as the starting point for induction hypothesis 1. Let $x^n - 1 = \Phi_{d_1}(X)\Phi_{d_2}(X)...\Phi_{d_k}(X)\Phi_{n}(X)$, where each $d_i \mid n$ (Theorem~\ref*{subsec:cyclotomic-theorem}.1). We know that $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ forms an integer coefficient polynomial. We treat $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ as $f(x)$, and $\Phi_n(X)$ as $g(x)$.
-    Then, according to step 4's induction proof, $\Phi_{n}(X)$ is an integer coefficient polynomial (also note that $\Phi_n(X)$ is monoic, whose the highest degree's coefficient is 1). 
-    \item As we marginally increase $n$ to $n+1$ to compute $x^{n+1} - 1 = \Phi_{d'_1}(X)\Phi_{d'_2}(X)...\Phi_{d'_k}(X)\Phi_{n+1}(X)$ (where each $d'_i \mid (n+1)$), we know that $\Phi_{d'_1}(X)\Phi_{d'_2}(X)\cdots\Phi_{d'_k}(X)$ is a monoic polynomial, as proved by the previous induction step. Thus, $\Phi_{n+1}(X)$ is also monoic. 
+    \item Now, we set $\Phi_1(X)$ (an integer coefficient polynomial) as the starting point for induction hypothesis 1. Let $x^n - 1 = \Phi_{d_1}(X)\Phi_{d_2}(X)...\Phi_{d_k}(X)\Phi_{n}(X)$, where each $d_i \mid n$ (Theorem~\ref*{subsec:cyclotomic-theorem}.2). We know that $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ forms an integer coefficient polynomial. We treat $\Phi_{d_1}(X)\Phi_{d_2}(X)\cdots\Phi_{d_k}(X)$ as $f(x)$, and $\Phi_n(X)$ as $g(x)$.
+    Then, according to step 4's induction proof, $\Phi_{n}(X)$ is an integer coefficient polynomial (also note that $\Phi_n(X)$ is monic, whose the highest degree's coefficient is 1). 
+    \item As we marginally increase $n$ to $n+1$ to compute $x^{n+1} - 1 = \Phi_{d'_1}(X)\Phi_{d'_2}(X)...\Phi_{d'_k}(X)\Phi_{n+1}(X)$ (where each $d'_i \mid (n+1)$), we know that $\Phi_{d'_1}(X)\Phi_{d'_2}(X)\cdots\Phi_{d'_k}(X)$ is a monic polynomial, as proved by the previous induction step. Thus, $\Phi_{n+1}(X)$ is also monic. 
 \end{enumerate}
 \end{myproof}
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:cyclotomic-theorem}.4} Formula for $\bm{\Phi_{nk}(x)}$}}]
@@ -86,7 +86,7 @@ If $k \mid n$, then $\Phi_{nk}(x) = \Phi_n(x^k)$.
 \begin{myproof}
 \begin{enumerate}
     \item Theorem~\ref*{subsec:order-theorem}.3 states that given $k \mid n$, $\text{ord}_{\mathbb{F}}(a) = kn$ if and only if $\text{ord}_{\mathbb{F}}(a^k) = n$. This means that for $\zeta \in \mathbb{C}$, $\text{ord}_{\mathbb{C}}(\zeta) = nk$ if and only if $\text{ord}_{\mathbb{C}}(\zeta^k) = n$. In other words, $\zeta$ is a primitive $nk$-th root of unity if and only if $\zeta^k$ is the primitive $n$-th root of unity. This implies that $\zeta$ is a root of $\Phi_{nk}(x)$ if and only if $\zeta^k$ is a root of $\Phi_{n}(x)$. 
-    \item Let $\Phi_{nk}(x) = (x - \zeta_1)(x - \zeta_2)...(x - \zeta_p)$, where $P(n)$ has $p$ primitive $nk$-th roots of unity.
+    \item Let $\Phi_{nk}(x) = (x - \zeta_1)(x - \zeta_2)...(x - \zeta_p)$, where $P(nk)$ has $p$ primitive $nk$-th roots of unity.
     \item $\Phi_{n}(x) = (x - \zeta_1^k)(x - \zeta_2^k)...(x - \zeta_p^k)$. Note that $P(n)$ should also have $p$ primitive $n$-th roots of unity, because elements of $P(nk)$ are isomorphic to the elements of $P(n)$ (as they preserved if and only if relationships in step 2). Now, it's also true that $\Phi_{n}(y) = (y - \zeta_1^k)(y - \zeta_2^k)...(y - \zeta_p^k)$, where $y = x^k$. In this case, $x = \{\zeta_1, \zeta_2, ... \zeta_p\}$.
     \item $\Phi_{nk}(x)$ and $\Phi_{n}(y) = \Phi_{n}(x^k)$ have the same roots with the same coefficients. Therefore, $\Phi_{nk}(x) = \Phi_{n}(y) = \Phi_{n}(x^k)$. 
 \end{enumerate}
